[package]
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
categories = ["emulators", "wasm"]
description = "A NES Emulator written in Rust with SDL2 and WebAssembly support"
documentation = "https://docs.rs/tetanes"
edition = "2021"
keywords = ["nes", "emulator", "wasm"]
license = "MIT OR Apache-2.0"
name = "tetanes"
repository = "https://github.com/lukexor/tetanes.git"
resolver = "2"
version = "0.9.0"
default-run = "tetanes"
exclude = ["/bin", "/static", "/test_roms", "/docs", "/test_results"]

[package.metadata]
msrv = "1.74.0"

[package.metadata.wix]
upgrade-guid = "DB76CEB0-15B8-4727-9C3E-55819AB5E7B9"
path-guid = "5731AE63-80DE-4CD7-ADFA-9E79BEDCE08B"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bitflags = { version = "2.4", features = ["serde"] }
enum_dispatch = "0.3"
flate2 = "1.0"
itertools = "0.12"
log = { version = "0.4", features = ["release_max_level_warn", "serde"] }
once_cell = "1.19"
pretty_env_logger = "0.5"
rand = "0.8"
ringbuf = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[features]
default = ["cycle-accurate"]
cycle-accurate = []
profiling = []

# Optimized development for playable framerates
[profile.dev-opt]
inherits = "dev"
opt-level = 2

[profile.test]
inherits = "dev-opt"

[profile.profile]
inherits = "release"
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
codegen-units = 1
lto = "thin"

[workspace]
members = ["utils"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.9.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "./package-macos"]
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["msi"]
